[F][Login/Logout]Minor fix to alignment issueS

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,13 +13,10 @@
   }
 }
 
-.modal-open {
-  overflow: scroll;
-  overflow-x: hidden;
-}
 
 body{
   background-color: #f7f7f7;  
+  overflow-y: scroll;
 }
 
 img{
